🐛 Fix: empty array sublist error